--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </ol>
   <br>
   <hr size="3" color="black">
-  <h3><strong><a href="Contact Details.html">Contact Details:</a></strong></h3>
+  <h3><strong><a href="contact-details.html">Contact Details:</a></strong></h3>
   <hr size="3" color="black">
   <h3><strong><u>Previous Experience</u>:</strong></h3>
   <table cellspacing="20">
